--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h3 {
 
 .remained {
     display: flex;
-    flex: column;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -81,6 +81,7 @@ h3 {
 .remained span {
     font-size: 20px;
     font-weight: bold;
+   
 }
 
 .remained small {
